--- a/DuAn1/nbproject/project.properties
+++ b/DuAn1/nbproject/project.properties
@@ -33,17 +33,29 @@ dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/DuAn1
 excludes=
+file.reference.datechooser-swing-1.4.1.jar=C:\\Users\\Admin\\Downloads\\datechooser-master\\library\\datechooser-swing-1.4.1.jar
+file.reference.flatlaf-3.1.1.jar=C:\\Users\\Admin\\Downloads\\datechooser-master\\library\\flatlaf-3.1.1.jar
+file.reference.flatlaf-extras-3.1.1.jar=C:\\Users\\Admin\\Downloads\\datechooser-master\\library\\flatlaf-extras-3.1.1.jar
+file.reference.jcalendar-1.4.jar.zip=C:\\Users\\Admin\\Downloads\\jcalendar-1.4.jar.zip
 file.reference.mssql-jdbc-11.2.3.jre11.jar=C:\\Users\\Admin\\Downloads\\sqljdbc_11.2\\enu\\mssql-jdbc-11.2.3.jre11.jar
 file.reference.mssql-jdbc-11.2.3.jre17.jar=C:\\Users\\Admin\\Downloads\\sqljdbc_11.2\\enu\\mssql-jdbc-11.2.3.jre17.jar
 file.reference.mssql-jdbc-11.2.3.jre18.jar=C:\\Users\\Admin\\Downloads\\sqljdbc_11.2\\enu\\mssql-jdbc-11.2.3.jre18.jar
 file.reference.mssql-jdbc-11.2.3.jre8.jar=C:\\Users\\Admin\\Downloads\\sqljdbc_11.2\\enu\\mssql-jdbc-11.2.3.jre8.jar
+file.reference.svgSalamander-1.1.4.jar=C:\\Users\\Admin\\Downloads\\datechooser-master\\library\\svgSalamander-1.1.4.jar
+file.reference.TimingFramework-0.55.jar=C:\\Users\\Admin\\Downloads\\TimingFramework-0.55.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.mssql-jdbc-11.2.3.jre11.jar}:\
     ${file.reference.mssql-jdbc-11.2.3.jre17.jar}:\
     ${file.reference.mssql-jdbc-11.2.3.jre18.jar}:\
-    ${file.reference.mssql-jdbc-11.2.3.jre8.jar}
+    ${file.reference.mssql-jdbc-11.2.3.jre8.jar}:\
+    ${file.reference.TimingFramework-0.55.jar}:\
+    ${file.reference.jcalendar-1.4.jar.zip}:\
+    ${file.reference.datechooser-swing-1.4.1.jar}:\
+    ${file.reference.flatlaf-3.1.1.jar}:\
+    ${file.reference.flatlaf-extras-3.1.1.jar}:\
+    ${file.reference.svgSalamander-1.1.4.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -79,7 +91,7 @@ jlink.additionalmodules=
 jlink.additionalparam=
 jlink.launcher=true
 jlink.launcher.name=DuAn1
-main.class=duan1.DuAn1
+main.class=application.DuAn1
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
