--- a/DuAn1/nbproject/project.properties
+++ b/DuAn1/nbproject/project.properties
@@ -1,9 +1,10 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
-annotation.processing.processor.options=
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
+application.title=DuAn1
+application.vendor=Admin
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -32,29 +33,36 @@ dist.jar=${dist.dir}/DuAn1.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/DuAn1
+endorsed.classpath=
 excludes=
-file.reference.datechooser-swing-1.4.1.jar=C:\\Users\\Admin\\Downloads\\datechooser-master\\library\\datechooser-swing-1.4.1.jar
-file.reference.flatlaf-3.1.1.jar=C:\\Users\\Admin\\Downloads\\datechooser-master\\library\\flatlaf-3.1.1.jar
-file.reference.flatlaf-extras-3.1.1.jar=C:\\Users\\Admin\\Downloads\\datechooser-master\\library\\flatlaf-extras-3.1.1.jar
-file.reference.jcalendar-1.4.jar.zip=C:\\Users\\Admin\\Downloads\\jcalendar-1.4.jar.zip
-file.reference.mssql-jdbc-11.2.3.jre11.jar=C:\\Users\\Admin\\Downloads\\sqljdbc_11.2\\enu\\mssql-jdbc-11.2.3.jre11.jar
-file.reference.mssql-jdbc-11.2.3.jre17.jar=C:\\Users\\Admin\\Downloads\\sqljdbc_11.2\\enu\\mssql-jdbc-11.2.3.jre17.jar
-file.reference.mssql-jdbc-11.2.3.jre18.jar=C:\\Users\\Admin\\Downloads\\sqljdbc_11.2\\enu\\mssql-jdbc-11.2.3.jre18.jar
-file.reference.mssql-jdbc-11.2.3.jre8.jar=C:\\Users\\Admin\\Downloads\\sqljdbc_11.2\\enu\\mssql-jdbc-11.2.3.jre8.jar
-file.reference.svgSalamander-1.1.4.jar=C:\\Users\\Admin\\Downloads\\datechooser-master\\library\\svgSalamander-1.1.4.jar
-file.reference.TimingFramework-0.55.jar=C:\\Users\\Admin\\Downloads\\TimingFramework-0.55.jar
+file.reference.datechooser-swing-1.4.1.jar=C:\\Users\\Admin\\Downloads\\library\\datechooser-swing-1.4.1.jar
+file.reference.flatlaf-3.1.1.jar=C:\\Users\\Admin\\Downloads\\library\\flatlaf-3.1.1.jar
+file.reference.flatlaf-extras-3.1.1.jar=C:\\Users\\Admin\\Downloads\\library\\flatlaf-extras-3.1.1.jar
+file.reference.jcalendar-1.1.4.jar=C:\\Users\\Admin\\Downloads\\library\\jcalendar-1.1.4.jar
+file.reference.jcalendar-1.4.jar.zip=C:\\Users\\Admin\\Downloads\\library\\jcalendar-1.4.jar.zip
+file.reference.miglayout-4.0.jar=C:\\Users\\Admin\\Downloads\\library\\miglayout-4.0.jar
+file.reference.mssql-jdbc-11.2.3.jre11.jar=C:\\Users\\Admin\\Downloads\\library\\mssql-jdbc-11.2.3.jre11.jar
+file.reference.mssql-jdbc-11.2.3.jre17.jar=C:\\Users\\Admin\\Downloads\\library\\mssql-jdbc-11.2.3.jre17.jar
+file.reference.mssql-jdbc-11.2.3.jre18.jar=C:\\Users\\Admin\\Downloads\\library\\mssql-jdbc-11.2.3.jre18.jar
+file.reference.mssql-jdbc-11.2.3.jre8.jar=C:\\Users\\Admin\\Downloads\\library\\mssql-jdbc-11.2.3.jre8.jar
+file.reference.svgSalamander-1.1.4.jar=C:\\Users\\Admin\\Downloads\\library\\svgSalamander-1.1.4.jar
+file.reference.TimingFramework-0.55.jar=C:\\Users\\Admin\\Downloads\\library\\TimingFramework-0.55.jar
+file.reference.TimingFramework-0.55__1_.jar=C:\\Users\\Admin\\Downloads\\library\\TimingFramework-0.55 (1).jar
 includes=**
 jar.compress=false
 javac.classpath=\
+    ${file.reference.TimingFramework-0.55__1_.jar}:\
+    ${file.reference.TimingFramework-0.55.jar}:\
+    ${file.reference.datechooser-swing-1.4.1.jar}:\
+    ${file.reference.flatlaf-3.1.1.jar}:\
+    ${file.reference.flatlaf-extras-3.1.1.jar}:\
+    ${file.reference.jcalendar-1.1.4.jar}:\
+    ${file.reference.jcalendar-1.4.jar.zip}:\
+    ${file.reference.miglayout-4.0.jar}:\
     ${file.reference.mssql-jdbc-11.2.3.jre11.jar}:\
     ${file.reference.mssql-jdbc-11.2.3.jre17.jar}:\
     ${file.reference.mssql-jdbc-11.2.3.jre18.jar}:\
     ${file.reference.mssql-jdbc-11.2.3.jre8.jar}:\
-    ${file.reference.TimingFramework-0.55.jar}:\
-    ${file.reference.jcalendar-1.4.jar.zip}:\
-    ${file.reference.datechooser-swing-1.4.1.jar}:\
-    ${file.reference.flatlaf-3.1.1.jar}:\
-    ${file.reference.flatlaf-extras-3.1.1.jar}:\
     ${file.reference.svgSalamander-1.1.4.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
