--- a/DuAn1/nbproject/project.properties
+++ b/DuAn1/nbproject/project.properties
@@ -33,17 +33,32 @@ dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/DuAn1
 excludes=
+file.reference.bridj-0.6.2-windows-only.jar=C:\\Users\\Admin\\Desktop\\DBC\\libraryDA\\bridj-0.6.2-windows-only.jar
+file.reference.core-3.3.3.jar=C:\\Users\\Admin\\Desktop\\DBC\\core-3.3.3.jar
+file.reference.javase-3.3.3.jar=C:\\Users\\Admin\\Desktop\\DBC\\javase-3.3.3.jar
+file.reference.log4j-1.2.17.jar=C:\\Users\\Admin\\Desktop\\DBC\\libraryDA\\log4j-1.2.17.jar
 file.reference.mssql-jdbc-11.2.3.jre11.jar=C:\\Users\\Admin\\Downloads\\sqljdbc_11.2\\enu\\mssql-jdbc-11.2.3.jre11.jar
 file.reference.mssql-jdbc-11.2.3.jre17.jar=C:\\Users\\Admin\\Downloads\\sqljdbc_11.2\\enu\\mssql-jdbc-11.2.3.jre17.jar
 file.reference.mssql-jdbc-11.2.3.jre18.jar=C:\\Users\\Admin\\Downloads\\sqljdbc_11.2\\enu\\mssql-jdbc-11.2.3.jre18.jar
 file.reference.mssql-jdbc-11.2.3.jre8.jar=C:\\Users\\Admin\\Downloads\\sqljdbc_11.2\\enu\\mssql-jdbc-11.2.3.jre8.jar
+file.reference.slf4j-api-1.6.2.jar=C:\\Users\\Admin\\Desktop\\DBC\\libraryDA\\slf4j-api-1.6.2.jar
+file.reference.slf4j-log4j12-1.6.2.jar=C:\\Users\\Admin\\Desktop\\DBC\\libraryDA\\slf4j-log4j12-1.6.2.jar
+file.reference.webcam-capture-0.3.12.jar=C:\\Users\\Admin\\Desktop\\DBC\\libraryDA\\webcam-capture-0.3.12.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.mssql-jdbc-11.2.3.jre11.jar}:\
     ${file.reference.mssql-jdbc-11.2.3.jre17.jar}:\
     ${file.reference.mssql-jdbc-11.2.3.jre18.jar}:\
-    ${file.reference.mssql-jdbc-11.2.3.jre8.jar}
+    ${file.reference.mssql-jdbc-11.2.3.jre8.jar}:\
+    ${file.reference.core-3.3.3.jar}:\
+    ${file.reference.javase-3.3.3.jar}:\
+    ${file.reference.bridj-0.6.2-windows-only.jar}:\
+    ${file.reference.log4j-1.2.17.jar}:\
+    ${file.reference.slf4j-api-1.6.2.jar}:\
+    ${file.reference.slf4j-log4j12-1.6.2.jar}:\
+    ${file.reference.webcam-capture-0.3.12.jar}:\
+    ${libs.absolutelayout.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
