--- a/DuAn1/nbproject/private/private.properties
+++ b/DuAn1/nbproject/private/private.properties
@@ -1,6 +1,13 @@
 compile.on.save=true
-file.reference.mssql-jdbc-11.2.3.jre11.jar=C:\\Users\\Admin\\Desktop\\DBC\\sqljdbc_11.2\\enu\\mssql-jdbc-11.2.0.jre11.jar
-file.reference.mssql-jdbc-11.2.3.jre17.jar=C:\\Users\\Admin\\Desktop\\DBC\\sqljdbc_11.2\\enu\\mssql-jdbc-11.2.0.jre17.jar
-file.reference.mssql-jdbc-11.2.3.jre18.jar=C:\\Users\\Admin\\Desktop\\DBC\\sqljdbc_11.2\\enu\\mssql-jdbc-11.2.0.jre18.jar
-file.reference.mssql-jdbc-11.2.3.jre8.jar=C:\\Users\\Admin\\Desktop\\DBC\\sqljdbc_11.2\\enu\\mssql-jdbc-11.2.0.jre8.jar
+file.reference.bridj-0.6.2-windows-only.jar=C:\\Users\\Admin\\Documents\\NetBeansProjects\\Phan Mem Ban Ao Phong BeeShirt\\libraryDA\\bridj-0.6.2-windows-only.jar
+file.reference.core-3.3.3.jar=C:\\Users\\Admin\\Documents\\NetBeansProjects\\Phan Mem Ban Ao Phong BeeShirt\\libraryDA\\core-3.3.3.jar
+file.reference.javase-3.3.3.jar=C:\\Users\\Admin\\Documents\\NetBeansProjects\\Phan Mem Ban Ao Phong BeeShirt\\libraryDA\\javase-3.3.3.jar
+file.reference.log4j-1.2.17.jar=C:\\Users\\Admin\\Documents\\NetBeansProjects\\Phan Mem Ban Ao Phong BeeShirt\\libraryDA\\log4j-1.2.17.jar
+file.reference.mssql-jdbc-11.2.3.jre11.jar=C:\\Users\\Admin\\Documents\\NetBeansProjects\\library\\mssql-jdbc-11.2.3.jre11.jar
+file.reference.mssql-jdbc-11.2.3.jre17.jar=C:\\Users\\Admin\\Documents\\NetBeansProjects\\library\\mssql-jdbc-11.2.3.jre17.jar
+file.reference.mssql-jdbc-11.2.3.jre18.jar=C:\\Users\\Admin\\Documents\\NetBeansProjects\\library\\mssql-jdbc-11.2.3.jre18.jar
+file.reference.mssql-jdbc-11.2.3.jre8.jar=C:\\Users\\Admin\\Documents\\NetBeansProjects\\library\\mssql-jdbc-11.2.3.jre8.jar
+file.reference.slf4j-api-1.6.2.jar=C:\\Users\\Admin\\Documents\\NetBeansProjects\\Phan Mem Ban Ao Phong BeeShirt\\libraryDA\\slf4j-api-1.6.2.jar
+file.reference.slf4j-log4j12-1.6.2.jar=C:\\Users\\Admin\\Documents\\NetBeansProjects\\Phan Mem Ban Ao Phong BeeShirt\\libraryDA\\slf4j-log4j12-1.6.2.jar
+file.reference.webcam-capture-0.3.12.jar=C:\\Users\\Admin\\Documents\\NetBeansProjects\\Phan Mem Ban Ao Phong BeeShirt\\libraryDA\\webcam-capture-0.3.12.jar
 user.properties.file=C:\\Users\\Admin\\AppData\\Roaming\\NetBeans\\12.6\\build.properties
