--- a/DuAn1/nbproject/project.properties
+++ b/DuAn1/nbproject/project.properties
@@ -35,18 +35,26 @@ dist.jlink.output=${dist.jlink.dir}/DuAn1
 excludes=
 file.reference.bridj-0.6.2-windows-only.jar=C:\\Users\\Admin\\Desktop\\DBC\\libraryDA\\bridj-0.6.2-windows-only.jar
 file.reference.core-3.3.3.jar=C:\\Users\\Admin\\Desktop\\DBC\\core-3.3.3.jar
+file.reference.datechooser-swing-1.4.1.jar-1=C:\\Users\\Admin\\Downloads\\library\\datechooser-swing-1.4.1.jar
+file.reference.flatlaf-3.1.1.jar-1=C:\\Users\\Admin\\Downloads\\library\\flatlaf-3.1.1.jar
+file.reference.flatlaf-extras-3.1.1.jar-1=C:\\Users\\Admin\\Downloads\\library\\flatlaf-extras-3.1.1.jar
 file.reference.javase-3.3.3.jar=C:\\Users\\Admin\\Desktop\\DBC\\javase-3.3.3.jar
+file.reference.jcalendar-1.1.4.jar=C:\\Users\\Admin\\Downloads\\library\\jcalendar-1.1.4.jar
+file.reference.jcalendar-1.4.jar.zip-1=C:\\Users\\Admin\\Downloads\\library\\jcalendar-1.4.jar.zip
 file.reference.log4j-1.2.17.jar=C:\\Users\\Admin\\Desktop\\DBC\\libraryDA\\log4j-1.2.17.jar
 file.reference.datechooser-swing-1.4.1.jar=C:\\Users\\Admin\\Downloads\\datechooser-master\\library\\datechooser-swing-1.4.1.jar
 file.reference.flatlaf-3.1.1.jar=C:\\Users\\Admin\\Downloads\\datechooser-master\\library\\flatlaf-3.1.1.jar
 file.reference.flatlaf-extras-3.1.1.jar=C:\\Users\\Admin\\Downloads\\datechooser-master\\library\\flatlaf-extras-3.1.1.jar
 file.reference.jcalendar-1.4.jar.zip=C:\\Users\\Admin\\Downloads\\jcalendar-1.4.jar.zip
+file.reference.miglayout-4.0.jar=C:\\Users\\Admin\\Downloads\\library\\miglayout-4.0.jar
 file.reference.mssql-jdbc-11.2.3.jre11.jar=C:\\Users\\Admin\\Downloads\\sqljdbc_11.2\\enu\\mssql-jdbc-11.2.3.jre11.jar
 file.reference.mssql-jdbc-11.2.3.jre17.jar=C:\\Users\\Admin\\Downloads\\sqljdbc_11.2\\enu\\mssql-jdbc-11.2.3.jre17.jar
 file.reference.mssql-jdbc-11.2.3.jre18.jar=C:\\Users\\Admin\\Downloads\\sqljdbc_11.2\\enu\\mssql-jdbc-11.2.3.jre18.jar
 file.reference.mssql-jdbc-11.2.3.jre8.jar=C:\\Users\\Admin\\Downloads\\sqljdbc_11.2\\enu\\mssql-jdbc-11.2.3.jre8.jar
 file.reference.slf4j-api-1.6.2.jar=C:\\Users\\Admin\\Desktop\\DBC\\libraryDA\\slf4j-api-1.6.2.jar
 file.reference.slf4j-log4j12-1.6.2.jar=C:\\Users\\Admin\\Desktop\\DBC\\libraryDA\\slf4j-log4j12-1.6.2.jar
+file.reference.svgSalamander-1.1.4.jar-1=C:\\Users\\Admin\\Downloads\\library\\svgSalamander-1.1.4.jar
+file.reference.TimingFramework-0.55.jar-1=C:\\Users\\Admin\\Downloads\\library\\TimingFramework-0.55.jar
 file.reference.webcam-capture-0.3.12.jar=C:\\Users\\Admin\\Desktop\\DBC\\libraryDA\\webcam-capture-0.3.12.jar
 file.reference.svgSalamander-1.1.4.jar=C:\\Users\\Admin\\Downloads\\datechooser-master\\library\\svgSalamander-1.1.4.jar
 file.reference.TimingFramework-0.55.jar=C:\\Users\\Admin\\Downloads\\TimingFramework-0.55.jar
@@ -64,7 +72,15 @@ javac.classpath=\
     ${file.reference.slf4j-api-1.6.2.jar}:\
     ${file.reference.slf4j-log4j12-1.6.2.jar}:\
     ${file.reference.webcam-capture-0.3.12.jar}:\
-    ${libs.absolutelayout.classpath}
+    ${libs.absolutelayout.classpath}:\
+    ${file.reference.TimingFramework-0.55.jar-1}:\
+    ${file.reference.datechooser-swing-1.4.1.jar-1}:\
+    ${file.reference.flatlaf-3.1.1.jar-1}:\
+    ${file.reference.flatlaf-extras-3.1.1.jar-1}:\
+    ${file.reference.jcalendar-1.1.4.jar}:\
+    ${file.reference.jcalendar-1.4.jar.zip-1}:\
+    ${file.reference.miglayout-4.0.jar}:\
+    ${file.reference.svgSalamander-1.1.4.jar-1}
     ${file.reference.TimingFramework-0.55.jar}:\
     ${file.reference.jcalendar-1.4.jar.zip}:\
     ${file.reference.datechooser-swing-1.4.1.jar}:\
