--- a/DuAn1/nbproject/private/private.properties
+++ b/DuAn1/nbproject/private/private.properties
@@ -1,2 +1,6 @@
 compile.on.save=true
+file.reference.mssql-jdbc-11.2.3.jre11.jar=D:\\FPoly\\PRO1041\\Project\\sqljdbc_11.2\\enu\\mssql-jdbc-11.2.0.jre11.jar
+file.reference.mssql-jdbc-11.2.3.jre17.jar=D:\\FPoly\\PRO1041\\Project\\sqljdbc_11.2\\enu\\mssql-jdbc-11.2.0.jre17.jar
+file.reference.mssql-jdbc-11.2.3.jre18.jar=D:\\FPoly\\PRO1041\\Project\\sqljdbc_11.2\\enu\\mssql-jdbc-11.2.0.jre18.jar
+file.reference.mssql-jdbc-11.2.3.jre8.jar=D:\\FPoly\\PRO1041\\Project\\sqljdbc_11.2\\enu\\mssql-jdbc-11.2.0.jre8.jar
 user.properties.file=C:\\Users\\Admin\\AppData\\Roaming\\NetBeans\\12.6\\build.properties
