--- a/DuAn1/nbproject/project.properties
+++ b/DuAn1/nbproject/project.properties
@@ -33,17 +33,29 @@ dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/DuAn1
 excludes=
+file.reference.activation-1.1.1.jar=D:\\FPoly\\PRO1041\\Project\\Da1-Done\\activation-1.1.1.jar
+file.reference.commons-math3-3.6.1.jar=D:\\FPoly\\PRO1041\\Project\\Da1-Done\\commons-math3-3.6.1.jar
+file.reference.javax.mail.jar=D:\\FPoly\\PRO1041\\Project\\Da1-Done\\javax.mail.jar
+file.reference.jcalendar-1.1.4.jar=D:\\FPoly\\PRO1041\\Project\\Da1-Done\\jcalendar-1.1.4.jar
+file.reference.miglayout-4.0.jar=D:\\FPoly\\PRO1041\\Project\\Da1-Done\\miglayout-4.0.jar
 file.reference.mssql-jdbc-11.2.3.jre11.jar=C:\\Users\\Admin\\Downloads\\sqljdbc_11.2\\enu\\mssql-jdbc-11.2.3.jre11.jar
 file.reference.mssql-jdbc-11.2.3.jre17.jar=C:\\Users\\Admin\\Downloads\\sqljdbc_11.2\\enu\\mssql-jdbc-11.2.3.jre17.jar
 file.reference.mssql-jdbc-11.2.3.jre18.jar=C:\\Users\\Admin\\Downloads\\sqljdbc_11.2\\enu\\mssql-jdbc-11.2.3.jre18.jar
 file.reference.mssql-jdbc-11.2.3.jre8.jar=C:\\Users\\Admin\\Downloads\\sqljdbc_11.2\\enu\\mssql-jdbc-11.2.3.jre8.jar
+file.reference.TimingFramework-0.55.jar=D:\\FPoly\\PRO1041\\Project\\Da1-Done\\TimingFramework-0.55.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.mssql-jdbc-11.2.3.jre11.jar}:\
     ${file.reference.mssql-jdbc-11.2.3.jre17.jar}:\
     ${file.reference.mssql-jdbc-11.2.3.jre18.jar}:\
-    ${file.reference.mssql-jdbc-11.2.3.jre8.jar}
+    ${file.reference.mssql-jdbc-11.2.3.jre8.jar}:\
+    ${file.reference.TimingFramework-0.55.jar}:\
+    ${file.reference.activation-1.1.1.jar}:\
+    ${file.reference.commons-math3-3.6.1.jar}:\
+    ${file.reference.javax.mail.jar}:\
+    ${file.reference.jcalendar-1.1.4.jar}:\
+    ${file.reference.miglayout-4.0.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
