--- a/DuAn1/nbproject/private/private.properties
+++ b/DuAn1/nbproject/private/private.properties
@@ -1,8 +1,10 @@
 compile.on.save=true
+file.reference.commons-math3-3.6.1.jar=C:\\Users\\Admin\\Documents\\NetBeansProjects\\Phan Mem Ban Ao Phong BeeShirt\\libraryDA\\commons-math3-3.6.1.jar
 file.reference.core-3.3.3.jar=C:\\Users\\Admin\\Documents\\NetBeansProjects\\Phan Mem Ban Ao Phong BeeShirt\\libraryDA\\core-3.3.3.jar
 file.reference.javase-3.3.3.jar=C:\\Users\\Admin\\Documents\\NetBeansProjects\\Phan Mem Ban Ao Phong BeeShirt\\libraryDA\\javase-3.3.3.jar
-file.reference.mssql-jdbc-11.2.3.jre11.jar=C:\\Users\\Admin\\Documents\\NetBeansProjects\\library\\mssql-jdbc-11.2.3.jre11.jar
-file.reference.mssql-jdbc-11.2.3.jre17.jar=C:\\Users\\Admin\\Documents\\NetBeansProjects\\library\\mssql-jdbc-11.2.3.jre17.jar
-file.reference.mssql-jdbc-11.2.3.jre18.jar=C:\\Users\\Admin\\Documents\\NetBeansProjects\\library\\mssql-jdbc-11.2.3.jre18.jar
-file.reference.mssql-jdbc-11.2.3.jre8.jar=C:\\Users\\Admin\\Documents\\NetBeansProjects\\library\\mssql-jdbc-11.2.3.jre8.jar
+file.reference.javax.mail.jar=C:\\Users\\Admin\\Documents\\NetBeansProjects\\Phan Mem Ban Ao Phong BeeShirt\\libraryDA\\javax.mail.jar
+file.reference.mssql-jdbc-11.2.3.jre11.jar=C:\\Users\\Admin\\Documents\\NetBeansProjects\\Phan Mem Ban Ao Phong BeeShirt\\libraryDA\\mssql-jdbc-11.2.3.jre11.jar
+file.reference.mssql-jdbc-11.2.3.jre17.jar=C:\\Users\\Admin\\Documents\\NetBeansProjects\\Phan Mem Ban Ao Phong BeeShirt\\libraryDA\\mssql-jdbc-11.2.3.jre17.jar
+file.reference.mssql-jdbc-11.2.3.jre18.jar=C:\\Users\\Admin\\Documents\\NetBeansProjects\\Phan Mem Ban Ao Phong BeeShirt\\libraryDA\\mssql-jdbc-11.2.3.jre18.jar
+file.reference.mssql-jdbc-11.2.3.jre8.jar=C:\\Users\\Admin\\Documents\\NetBeansProjects\\Phan Mem Ban Ao Phong BeeShirt\\libraryDA\\mssql-jdbc-11.2.3.jre8.jar
 user.properties.file=C:\\Users\\Admin\\AppData\\Roaming\\NetBeans\\12.6\\build.properties
