--- a/DuAn1/nbproject/project.properties
+++ b/DuAn1/nbproject/project.properties
@@ -34,6 +34,12 @@ dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/DuAn1
 excludes=
 file.reference.commons-math3-3.6.1.jar=D:\\FPoly\\PRO1041\\Project\\Da1-Done\\commons-math3-3.6.1.jar
+file.reference.commons-math3-3.6.1.jar-1=..\\libraryDA\\commons-math3-3.6.1.jar
+file.reference.core-3.3.3.jar-1=..\\libraryDA\\core-3.3.3.jar
+file.reference.datechooser-swing-1.4.1.jar-2=..\\libraryDA\\datechooser-swing-1.4.1.jar
+file.reference.flatlaf-3.1.1.jar-2=..\\libraryDA\\flatlaf-3.1.1.jar
+file.reference.flatlaf-extras-3.1.1.jar-2=..\\libraryDA\\flatlaf-extras-3.1.1.jar
+file.reference.javase-3.3.3.jar-1=..\\libraryDA\\javase-3.3.3.jar
 file.reference.javax.mail.jar=D:\\FPoly\\PRO1041\\Project\\Da1-Done\\javax.mail.jar
 file.reference.activation-1.1.1.jar=..\\libraryDA\\activation-1.1.1.jar
 file.reference.bridj-0.6.2-windows-only.jar=..\\libraryDA\\bridj-0.6.2-windows-only.jar
@@ -49,9 +55,13 @@ file.reference.flatlaf-extras-3.1.1.jar-1=C:\\Users\\Admin\\Downloads\\library\\
 file.reference.javase-3.3.0.jar=..\\libraryDA\\javase-3.3.0.jar
 file.reference.javase-3.3.3.jar=C:\\Users\\Admin\\Desktop\\DBC\\javase-3.3.3.jar
 file.reference.javax.mail-1.5.0.jar=..\\libraryDA\\javax.mail-1.5.0.jar
+file.reference.javax.mail.jar-1=..\\libraryDA\\javax.mail.jar
 file.reference.jcalendar-1.1.4.jar=C:\\Users\\Admin\\Downloads\\library\\jcalendar-1.1.4.jar
+file.reference.jcalendar-1.1.4.jar-1=..\\libraryDA\\jcalendar-1.1.4.jar
 file.reference.jcalendar-1.4.jar.zip-1=C:\\Users\\Admin\\Downloads\\library\\jcalendar-1.4.jar.zip
+file.reference.jcalendar-1.4.jar.zip-2=..\\libraryDA\\jcalendar-1.4.jar.zip
 file.reference.JCalendar.jar=..\\libraryDA\\JCalendar.jar
+file.reference.log4j-1.2.16.jar=..\\libraryDA\\log4j-1.2.16.jar
 file.reference.log4j-1.2.17.jar=..\\libraryDA\\log4j-1.2.17.jar
 file.reference.datechooser-swing-1.4.1.jar=C:\\Users\\Admin\\Downloads\\datechooser-master\\library\\datechooser-swing-1.4.1.jar
 file.reference.flatlaf-3.1.1.jar=C:\\Users\\Admin\\Downloads\\datechooser-master\\library\\flatlaf-3.1.1.jar
@@ -59,16 +69,25 @@ file.reference.flatlaf-extras-3.1.1.jar=C:\\Users\\Admin\\Downloads\\datechooser
 file.reference.jcalendar-1.4.jar.zip=C:\\Users\\Admin\\Downloads\\jcalendar-1.4.jar.zip
 file.reference.miglayout-4.0.jar=C:\\Users\\Admin\\Downloads\\library\\miglayout-4.0.jar
 file.reference.miglayout-4.0.jar-1=..\\libraryDA\\miglayout-4.0.jar
+file.reference.mssql-jdbc-11.2.0.jre11.jar=..\\libraryDA\\mssql-jdbc-11.2.0.jre11.jar
+file.reference.mssql-jdbc-11.2.0.jre17.jar=..\\libraryDA\\mssql-jdbc-11.2.0.jre17.jar
+file.reference.mssql-jdbc-11.2.0.jre18.jar=..\\libraryDA\\mssql-jdbc-11.2.0.jre18.jar
+file.reference.mssql-jdbc-11.2.0.jre8.jar=..\\libraryDA\\mssql-jdbc-11.2.0.jre8.jar
 file.reference.mssql-jdbc-11.2.3.jre11.jar=C:\\Users\\Admin\\Downloads\\sqljdbc_11.2\\enu\\mssql-jdbc-11.2.3.jre11.jar
+file.reference.mssql-jdbc-11.2.3.jre11.jar-1=..\\libraryDA\\mssql-jdbc-11.2.3.jre11.jar
 file.reference.mssql-jdbc-11.2.3.jre17.jar=C:\\Users\\Admin\\Downloads\\sqljdbc_11.2\\enu\\mssql-jdbc-11.2.3.jre17.jar
+file.reference.mssql-jdbc-11.2.3.jre17.jar-1=..\\libraryDA\\mssql-jdbc-11.2.3.jre17.jar
 file.reference.mssql-jdbc-11.2.3.jre18.jar=C:\\Users\\Admin\\Downloads\\sqljdbc_11.2\\enu\\mssql-jdbc-11.2.3.jre18.jar
+file.reference.mssql-jdbc-11.2.3.jre18.jar-1=..\\libraryDA\\mssql-jdbc-11.2.3.jre18.jar
 file.reference.mssql-jdbc-11.2.3.jre8.jar=C:\\Users\\Admin\\Downloads\\sqljdbc_11.2\\enu\\mssql-jdbc-11.2.3.jre8.jar
+file.reference.mssql-jdbc-11.2.3.jre8.jar-1=..\\libraryDA\\mssql-jdbc-11.2.3.jre8.jar
 file.reference.poi-4.0.1.jar=..\\libraryDA\\poi-4.0.1.jar
 file.reference.poi-ooxml-4.0.1.jar=..\\libraryDA\\poi-ooxml-4.0.1.jar
 file.reference.poi-ooxml-schemas-4.0.1.jar=..\\libraryDA\\poi-ooxml-schemas-4.0.1.jar
 file.reference.slf4j-api-1.6.2.jar=..\\libraryDA\\slf4j-api-1.6.2.jar
 file.reference.slf4j-log4j12-1.6.2.jar=..\\libraryDA\\slf4j-log4j12-1.6.2.jar
 file.reference.svgSalamander-1.1.4.jar-1=C:\\Users\\Admin\\Downloads\\library\\svgSalamander-1.1.4.jar
+file.reference.svgSalamander-1.1.4.jar-2=..\\libraryDA\\svgSalamander-1.1.4.jar
 file.reference.TimingFramework-0.55.jar-1=C:\\Users\\Admin\\Downloads\\library\\TimingFramework-0.55.jar
 file.reference.TimingFramework-0.55.jar-2=..\\libraryDA\\TimingFramework-0.55.jar
 file.reference.webcam-capture-0.3.12.jar=..\\libraryDA\\webcam-capture-0.3.12.jar
@@ -119,7 +138,26 @@ javac.classpath=\
     ${file.reference.slf4j-api-1.6.2.jar}:\
     ${file.reference.slf4j-log4j12-1.6.2.jar}:\
     ${file.reference.webcam-capture-0.3.12.jar}:\
-    ${file.reference.xmlbeans-3.0.2.jar}
+    ${file.reference.xmlbeans-3.0.2.jar}:\
+    ${file.reference.commons-math3-3.6.1.jar-1}:\
+    ${file.reference.core-3.3.3.jar-1}:\
+    ${file.reference.datechooser-swing-1.4.1.jar-2}:\
+    ${file.reference.flatlaf-3.1.1.jar-2}:\
+    ${file.reference.flatlaf-extras-3.1.1.jar-2}:\
+    ${file.reference.javase-3.3.3.jar-1}:\
+    ${file.reference.javax.mail.jar-1}:\
+    ${file.reference.jcalendar-1.1.4.jar-1}:\
+    ${file.reference.jcalendar-1.4.jar.zip-2}:\
+    ${file.reference.log4j-1.2.16.jar}:\
+    ${file.reference.mssql-jdbc-11.2.0.jre11.jar}:\
+    ${file.reference.mssql-jdbc-11.2.0.jre17.jar}:\
+    ${file.reference.mssql-jdbc-11.2.0.jre18.jar}:\
+    ${file.reference.mssql-jdbc-11.2.0.jre8.jar}:\
+    ${file.reference.mssql-jdbc-11.2.3.jre11.jar-1}:\
+    ${file.reference.mssql-jdbc-11.2.3.jre17.jar-1}:\
+    ${file.reference.mssql-jdbc-11.2.3.jre18.jar-1}:\
+    ${file.reference.mssql-jdbc-11.2.3.jre8.jar-1}:\
+    ${file.reference.svgSalamander-1.1.4.jar-2}
     ${file.reference.TimingFramework-0.55.jar}:\
     ${file.reference.jcalendar-1.4.jar.zip}:\
     ${file.reference.datechooser-swing-1.4.1.jar}:\
