Done Thong Ke Doanh Thu Lan 2

--- a/DuAn1/nbproject/project.properties
+++ b/DuAn1/nbproject/project.properties
@@ -61,6 +61,8 @@ file.reference.jcalendar-1.1.4.jar-1=..\\libraryDA\\jcalendar-1.1.4.jar
 file.reference.jcalendar-1.4.jar.zip-1=C:\\Users\\Admin\\Downloads\\library\\jcalendar-1.4.jar.zip
 file.reference.jcalendar-1.4.jar.zip-2=..\\libraryDA\\jcalendar-1.4.jar.zip
 file.reference.JCalendar.jar=..\\libraryDA\\JCalendar.jar
+file.reference.jcommon-1.0.23.jar=..\\libraryDA\\jcommon-1.0.23.jar
+file.reference.jfreechart-1.5.0.jar=..\\libraryDA\\jfreechart-1.5.0.jar
 file.reference.log4j-1.2.16.jar=..\\libraryDA\\log4j-1.2.16.jar
 file.reference.log4j-1.2.17.jar=..\\libraryDA\\log4j-1.2.17.jar
 file.reference.datechooser-swing-1.4.1.jar=C:\\Users\\Admin\\Downloads\\datechooser-master\\library\\datechooser-swing-1.4.1.jar
@@ -157,7 +159,9 @@ javac.classpath=\
     ${file.reference.mssql-jdbc-11.2.3.jre17.jar-1}:\
     ${file.reference.mssql-jdbc-11.2.3.jre18.jar-1}:\
     ${file.reference.mssql-jdbc-11.2.3.jre8.jar-1}:\
-    ${file.reference.svgSalamander-1.1.4.jar-2}
+    ${file.reference.svgSalamander-1.1.4.jar-2}:\
+    ${file.reference.jcommon-1.0.23.jar}:\
+    ${file.reference.jfreechart-1.5.0.jar}
     ${file.reference.TimingFramework-0.55.jar}:\
     ${file.reference.jcalendar-1.4.jar.zip}:\
     ${file.reference.datechooser-swing-1.4.1.jar}:\
