--- a/DuAn1/nbproject/private/private.properties
+++ b/DuAn1/nbproject/private/private.properties
@@ -1,18 +1,18 @@
 compile.on.save=true
-file.reference.commons-math3-3.6.1.jar=C:\\Users\\Admin\\Desktop\\DAN1\\libraryDA\\commons-math3-3.6.1.jar
-file.reference.core-3.3.3.jar=C:\\Users\\Admin\\Desktop\\DAN1\\libraryDA\\core-3.3.3.jar
-file.reference.datechooser-swing-1.4.1.jar-1=C:\\Users\\Admin\\Desktop\\DAN1\\libraryDA\\datechooser-swing-1.4.1.jar
-file.reference.flatlaf-3.1.1.jar-1=C:\\Users\\Admin\\Desktop\\DAN1\\libraryDA\\flatlaf-3.1.1.jar
-file.reference.flatlaf-extras-3.1.1.jar-1=C:\\Users\\Admin\\Desktop\\DAN1\\libraryDA\\flatlaf-extras-3.1.1.jar
-file.reference.javase-3.3.3.jar=C:\\Users\\Admin\\Desktop\\DAN1\\libraryDA\\javase-3.3.3.jar
-file.reference.javax.mail.jar=C:\\Users\\Admin\\Desktop\\DAN1\\libraryDA\\javax.mail.jar
-file.reference.jcalendar-1.1.4.jar=C:\\Users\\Admin\\Desktop\\DAN1\\libraryDA\\jcalendar-1.1.4.jar
-file.reference.jcalendar-1.4.jar.zip-1=C:\\Users\\Admin\\Desktop\\DAN1\\libraryDA\\jcalendar-1.4.jar.zip
-file.reference.miglayout-4.0.jar=C:\\Users\\Admin\\Desktop\\DAN1\\libraryDA\\miglayout-4.0.jar
-file.reference.mssql-jdbc-11.2.3.jre11.jar=C:\\Users\\Admin\\Desktop\\DAN1\\libraryDA\\mssql-jdbc-11.2.3.jre11.jar
-file.reference.mssql-jdbc-11.2.3.jre17.jar=C:\\Users\\Admin\\Desktop\\DAN1\\libraryDA\\mssql-jdbc-11.2.3.jre17.jar
-file.reference.mssql-jdbc-11.2.3.jre18.jar=C:\\Users\\Admin\\Desktop\\DAN1\\libraryDA\\mssql-jdbc-11.2.3.jre18.jar
-file.reference.mssql-jdbc-11.2.3.jre8.jar=C:\\Users\\Admin\\Desktop\\DAN1\\libraryDA\\mssql-jdbc-11.2.3.jre8.jar
-file.reference.svgSalamander-1.1.4.jar-1=C:\\Users\\Admin\\Desktop\\DAN1\\libraryDA\\svgSalamander-1.1.4.jar
-file.reference.TimingFramework-0.55.jar-1=C:\\Users\\Admin\\Desktop\\DAN1\\libraryDA\\TimingFramework-0.55.jar
+file.reference.commons-math3-3.6.1.jar=C:\\Users\\Admin\\Documents\\NetBeansProjects\\Phan Mem Ban Ao Phong BeeShirt\\libraryDA\\commons-math3-3.6.1.jar
+file.reference.core-3.3.3.jar=C:\\Users\\Admin\\Documents\\NetBeansProjects\\Phan Mem Ban Ao Phong BeeShirt\\libraryDA\\core-3.3.3.jar
+file.reference.datechooser-swing-1.4.1.jar-1=C:\\Users\\Admin\\Documents\\NetBeansProjects\\Phan Mem Ban Ao Phong BeeShirt\\libraryDA\\datechooser-swing-1.4.1.jar
+file.reference.flatlaf-3.1.1.jar-1=C:\\Users\\Admin\\Documents\\NetBeansProjects\\Phan Mem Ban Ao Phong BeeShirt\\libraryDA\\flatlaf-3.1.1.jar
+file.reference.flatlaf-extras-3.1.1.jar-1=C:\\Users\\Admin\\Documents\\NetBeansProjects\\Phan Mem Ban Ao Phong BeeShirt\\libraryDA\\flatlaf-3.1.1.jar
+file.reference.javase-3.3.3.jar=C:\\Users\\Admin\\Documents\\NetBeansProjects\\Phan Mem Ban Ao Phong BeeShirt\\libraryDA\\javase-3.3.3.jar
+file.reference.javax.mail.jar=C:\\Users\\Admin\\Documents\\NetBeansProjects\\Phan Mem Ban Ao Phong BeeShirt\\libraryDA\\javax.mail.jar
+file.reference.jcalendar-1.1.4.jar=C:\\Users\\Admin\\Documents\\NetBeansProjects\\Phan Mem Ban Ao Phong BeeShirt\\libraryDA\\jcalendar-1.1.4.jar
+file.reference.jcalendar-1.4.jar.zip-1=C:\\Users\\Admin\\Documents\\NetBeansProjects\\Phan Mem Ban Ao Phong BeeShirt\\libraryDA\\jcalendar-1.4.jar.zip
+file.reference.miglayout-4.0.jar=C:\\Users\\Admin\\Documents\\NetBeansProjects\\Phan Mem Ban Ao Phong BeeShirt\\libraryDA\\miglayout-4.0.jar
+file.reference.mssql-jdbc-11.2.3.jre11.jar=C:\\Users\\Admin\\Documents\\NetBeansProjects\\Phan Mem Ban Ao Phong BeeShirt\\libraryDA\\mssql-jdbc-11.2.3.jre11.jar
+file.reference.mssql-jdbc-11.2.3.jre17.jar=C:\\Users\\Admin\\Documents\\NetBeansProjects\\Phan Mem Ban Ao Phong BeeShirt\\libraryDA\\mssql-jdbc-11.2.3.jre17.jar
+file.reference.mssql-jdbc-11.2.3.jre18.jar=C:\\Users\\Admin\\Documents\\NetBeansProjects\\Phan Mem Ban Ao Phong BeeShirt\\libraryDA\\mssql-jdbc-11.2.3.jre18.jar
+file.reference.mssql-jdbc-11.2.3.jre8.jar=C:\\Users\\Admin\\Documents\\NetBeansProjects\\Phan Mem Ban Ao Phong BeeShirt\\libraryDA\\mssql-jdbc-11.2.3.jre8.jar
+file.reference.svgSalamander-1.1.4.jar-1=C:\\Users\\Admin\\Documents\\NetBeansProjects\\Phan Mem Ban Ao Phong BeeShirt\\libraryDA\\svgSalamander-1.1.4.jar
+file.reference.TimingFramework-0.55.jar-1=C:\\Users\\Admin\\Documents\\NetBeansProjects\\Phan Mem Ban Ao Phong BeeShirt\\libraryDA\\TimingFramework-0.55.jar
 user.properties.file=C:\\Users\\Admin\\AppData\\Roaming\\NetBeans\\12.6\\build.properties
