--- a/DuAn1/nbproject/project.properties
+++ b/DuAn1/nbproject/project.properties
@@ -38,7 +38,10 @@ file.reference.commons-math3-3.6.1.jar-1=..\\libraryDA\\commons-math3-3.6.1.jar
 file.reference.core-3.3.3.jar-1=..\\libraryDA\\core-3.3.3.jar
 file.reference.datechooser-swing-1.4.1.jar-2=..\\libraryDA\\datechooser-swing-1.4.1.jar
 file.reference.flatlaf-3.1.1.jar-2=..\\libraryDA\\flatlaf-3.1.1.jar
+file.reference.flatlaf-3.2.jar=C:\\Users\\Admin\\Downloads\\flatlaf-dashboard-main\\lib\\flatlaf-3.2.jar
 file.reference.flatlaf-extras-3.1.1.jar-2=..\\libraryDA\\flatlaf-extras-3.1.1.jar
+file.reference.flatlaf-extras-3.2.jar=C:\\Users\\Admin\\Downloads\\flatlaf-dashboard-main\\lib\\flatlaf-extras-3.2.jar
+file.reference.flatlaf-fonts-roboto-2.137.jar=C:\\Users\\Admin\\Downloads\\flatlaf-dashboard-main\\lib\\flatlaf-fonts-roboto-2.137.jar
 file.reference.javase-3.3.3.jar-1=..\\libraryDA\\javase-3.3.3.jar
 file.reference.javax.mail.jar=D:\\FPoly\\PRO1041\\Project\\Da1-Done\\javax.mail.jar
 file.reference.activation-1.1.1.jar=..\\libraryDA\\activation-1.1.1.jar
@@ -63,6 +66,7 @@ file.reference.jcalendar-1.4.jar.zip-2=..\\libraryDA\\jcalendar-1.4.jar.zip
 file.reference.JCalendar.jar=..\\libraryDA\\JCalendar.jar
 file.reference.jcommon-1.0.23.jar=..\\libraryDA\\jcommon-1.0.23.jar
 file.reference.jfreechart-1.5.0.jar=..\\libraryDA\\jfreechart-1.5.0.jar
+file.reference.jsvg-1.2.0.jar=C:\\Users\\Admin\\Downloads\\flatlaf-dashboard-main\\lib\\jsvg-1.2.0.jar
 file.reference.log4j-1.2.16.jar=..\\libraryDA\\log4j-1.2.16.jar
 file.reference.log4j-1.2.17.jar=..\\libraryDA\\log4j-1.2.17.jar
 file.reference.datechooser-swing-1.4.1.jar=C:\\Users\\Admin\\Downloads\\datechooser-master\\library\\datechooser-swing-1.4.1.jar
@@ -90,6 +94,7 @@ file.reference.slf4j-api-1.6.2.jar=..\\libraryDA\\slf4j-api-1.6.2.jar
 file.reference.slf4j-log4j12-1.6.2.jar=..\\libraryDA\\slf4j-log4j12-1.6.2.jar
 file.reference.svgSalamander-1.1.4.jar-1=C:\\Users\\Admin\\Downloads\\library\\svgSalamander-1.1.4.jar
 file.reference.svgSalamander-1.1.4.jar-2=..\\libraryDA\\svgSalamander-1.1.4.jar
+file.reference.swing-toast-notifications-1.0.1.jar=C:\\Users\\Admin\\Downloads\\flatlaf-dashboard-main\\lib\\swing-toast-notifications-1.0.1.jar
 file.reference.TimingFramework-0.55.jar-1=C:\\Users\\Admin\\Downloads\\library\\TimingFramework-0.55.jar
 file.reference.TimingFramework-0.55.jar-2=..\\libraryDA\\TimingFramework-0.55.jar
 file.reference.webcam-capture-0.3.12.jar=..\\libraryDA\\webcam-capture-0.3.12.jar
@@ -161,7 +166,12 @@ javac.classpath=\
     ${file.reference.mssql-jdbc-11.2.3.jre8.jar-1}:\
     ${file.reference.svgSalamander-1.1.4.jar-2}:\
     ${file.reference.jcommon-1.0.23.jar}:\
-    ${file.reference.jfreechart-1.5.0.jar}
+    ${file.reference.jfreechart-1.5.0.jar}:\
+    ${file.reference.flatlaf-3.2.jar}:\
+    ${file.reference.flatlaf-extras-3.2.jar}:\
+    ${file.reference.flatlaf-fonts-roboto-2.137.jar}:\
+    ${file.reference.jsvg-1.2.0.jar}:\
+    ${file.reference.swing-toast-notifications-1.0.1.jar}
     ${file.reference.TimingFramework-0.55.jar}:\
     ${file.reference.jcalendar-1.4.jar.zip}:\
     ${file.reference.datechooser-swing-1.4.1.jar}:\
@@ -180,7 +190,12 @@ javac.source=17
 javac.target=17
 javac.test.classpath=\
     ${javac.classpath}:\
-    ${build.classes.dir}
+    ${build.classes.dir}:\
+    ${file.reference.flatlaf-3.2.jar}:\
+    ${file.reference.flatlaf-extras-3.2.jar}:\
+    ${file.reference.flatlaf-fonts-roboto-2.137.jar}:\
+    ${file.reference.jsvg-1.2.0.jar}:\
+    ${file.reference.swing-toast-notifications-1.0.1.jar}
 javac.test.modulepath=\
     ${javac.modulepath}
 javac.test.processorpath=\
